# partclone-nbd

./: CMakeLists.txt  README.md  bitmap.h  image.h  partclone-nbd.c  partclone-nbd.cpp
